# citecraft

./: .env.example  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  citation_parser.py  config_loader.py  doi_fetcher.py  environment.yml  journal_fetcher.py  pyproject.toml  reference_fetcher.py  requests_wrapper.py  requirements.txt  style_fetcher.py  test_citation_parser.py  test_doi_fetcher.py  test_integ_doi_api_health.py  test_integ_journals_api_health.py  test_integ_styles_api_health.py  test_journal_fetcher.py  test_reference_fetcher.py  test_requests_wrapper.py  test_text_loader.py  test_work_fetcher.py  text_loader.py
.github/ISSUE_TEMPLATE/: feature-request.yml  report-an-issue.yml
.github/workflows/: test.yml
docs/designs/: 0001-customtkinter-architecture-v0.1.md  0002-automated-and-manual-documentation-system-v0.1.md
src/citecraft/: __init__.py  __main__.py  cli.py  core.py  logging_config.py
src/citecraft/adapters/: __init__.py  citeproc_adapter.py
src/citecraft/logging_infra/: __init__.py  logging_tools.py  progress_bar_context.py
src/citecraft/network/: __init__.py  http_client_registry.py  http_client_wrapper.py
src/citecraft/parsers/: __init__.py  citation_parser.py  html_cleaner.py  journal_parser.py
src/citecraft/repositories/: __init__.py  base_repository.py  crossref_work_repository.py  doi_repository.py  journal_repository.py  openalex_work_repository.py  style_repository.py  work_repository.py
src/citecraft/schemas/: __init__.py  base_schema.py  citation_metadata.py  crossref_author.py  csl_date.py  csl_name.py  csl_reference.py  doi_type.py  issn_type.py  journal_metadata.py  pipeline_types.py  types.py  work_metadata.py
src/citecraft/services/: __init__.py  bibliography_service.py  reference_service.py
src/citecraft/storage/: __init__.py  db.py  db_client.py
src/citecraft/ui/: __init__.py  __main__.py  app.py  progress_bar_context.py
src/citecraft/utils/: __init__.py  config.py  data_loader.py  paths.py
src/manuscript_reference_lister/: __init__.py  citation_parser.py  cli.py  config_loader.py  core.py  doi_repository.py  journal_parser.py  journal_repository.py  logging_config.py  requests_wrapper.py  style_repository.py  work_metadata.py  work_repository.py
src/manuscript_reference_lister/adapters/: citeproc_adapter.py
src/manuscript_reference_lister/network/: http_client_registry.py  http_client_wrapper.py
src/manuscript_reference_lister/parsers/: __init__.py  citation_parser.py  html_cleaner.py  journal_parser.py
src/manuscript_reference_lister/repositories/: __init__.py  base_repository.py  crossref_work_repository.py  doi_repository.py  journal_repository.py  openalex_work_repository.py  style_repository.py  work_repository.py
src/manuscript_reference_lister/schemas/: __init__.py  base_schema.py  citation_metadata.py  csl_date.py  csl_name.py  csl_reference.py  doi_type.py  issn_type.py  journal_metadata.py  work_metadata.py
src/manuscript_reference_lister/services/: __init__.py  bibliography_service.py  reference_service.py
src/manuscript_reference_lister/storage/: __init__.py  db.py
src/manuscript_reference_lister/ui/: __init__.py  progress_bar_context.py
src/manuscript_reference_lister/utils/: __init__.py  config.py  data_loader.py
tests/: conftest.py
tests/e2e/: __init__.py  test_cli_pipeline.py
tests/integration/: __init__.py  test_integ_crossref_work_api_health.py  test_integ_doi_api_health.py  test_integ_journal_api_health.py  test_integ_openalex_work_api_health.py  test_integ_style_api_health.py  test_integ_work_api_health.py
tests/integration/cassettes/test_integ_crossref_work_api_health/: test_integ_crossref_works_api_health.yaml
tests/integration/cassettes/test_integ_doi_api_health/: test_doi_api_service_health.yaml  test_doi_api_service_not_found.yaml
tests/integration/cassettes/test_integ_journal_api_health/: test_integ_journals_api_health.yaml
tests/integration/cassettes/test_integ_openalex_work_api_health/: test_integ_openalex_works_api_health.yaml
tests/integration/cassettes/test_integ_style_api_health/: test_style_api_health.yaml  test_style_repository_integration.yaml
tests/integration/cassettes/test_integ_work_api_health/: test_integ_works_api_health.yaml
tests/unit/: test___main__.py  test_base_repository.py  test_citation_parser.py  test_cli.py  test_core.py  test_doi_fetcher.py  test_doi_repository.py  test_journal_fetcher.py  test_journal_parser.py  test_journal_repository.py  test_logging_config.py  test_requests_wrapper.py  test_style_fetcher.py  test_style_repository.py  test_work_repository.py
tests/unit/adapters/: __init__.py  test_citeproc_adapter.py
tests/unit/adapters/fixtures/: mock_csl.xml
tests/unit/logging_infra/: __init__.py  test_logging_tools.py  test_progress_bar_context.py
tests/unit/network/: __init__.py  test_http_client_registry.py  test_http_client_wrapper.py
tests/unit/parsers/: __init__.py  test_citation_parser.py  test_html_cleaner.py  test_journal_parser.py
tests/unit/repositories/: __init__.py  test_base_repository.py  test_crossref_work_repository.py  test_doi_repository.py  test_journal_repository.py  test_openalex_work_repository.py  test_style_repository.py  test_work_repository.py
tests/unit/schemas/: __init__.py  test_base_schema.py  test_citation_metadata.py  test_csl_reference.py  test_doi_type.py  test_issn_type.py  test_journal_metadata.py  test_types.py  test_work_metadata.py
tests/unit/services/: __init__.py  test_bibliography_service.py  test_reference_service.py
tests/unit/storage/: __init__.py  test_db.py  test_db_client.py
tests/unit/ui/: __init__.py  test_app.py  test_progress_bar_context.py
tests/unit/utils/: __init__.py  test_config.py  test_data_loader.py  test_paths.py
