[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citecraft"]

[project]
name = "citecraft"
version = "0.1.0"
description = "Generates bibliography of manuscripts"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "citeproc-py>=0.9.3",
    "click>=8.3.3",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "tenacity>=9.1.4",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
"pytest>=8.3.4",
    "pytest-recording>=0.13.2",
    "ruff>=0.9.0",
]

[project.scripts]
citecraft = "citecraft.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end to end tests (slower)",
    "integration: integration and api tests (slower)",
    "unit: unit tests (faster)"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

