# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citecraft"]

[project]
name = "citecraft"
version = "0.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Generates bibliography of manuscripts"
readme = "README.md"
requires-python = ">=3.12.9"
authors = [
    { name = "Sebastien Lenard", email = "sebastien.lenard@gmail.com" }
]
dependencies = [
    "citeproc-py>=0.9.3",
    "click>=8.3.3",
    "customtkinter>=5.2.2",
    "defusedxml",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "idna>=3.15", # addresses vulnerabilities of 3.13
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "tenacity>=9.1.4",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-recording>=0.13.2",
    "ruff>=0.9.0",
]

[project.scripts]
citecraft = "citecraft.cli:cli"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end to end tests (slower)",
    "integration: integration and api tests (slower)",
    "unit: unit tests (faster)"
]
filterwarnings = [
    "ignore:'citecraft.cli' found in sys.modules:RuntimeWarning"
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "uv.lock"
]
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A", "ANN", "ARG", "BLE", "C4", "C90", "COM", "CPY", "D", "DTZ", "EM", "ERA", "EXE", "FA", "FBT", "FIX", "FLY", "FURB", "G", "ICN", "INP", "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "UP", "T10", "T20", "TC", "TD", "TID", "TRY", "W", "YTT"]
extend-ignore = ["D107"]
fixable = ["ALL"]
unfixable = []
allowed-confusables = ["ℹ"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001", # Allow apparently non accessed arguments
    "ARG005", # Allow apparently non accessed arguments
    "BLE001",  # Allow broad exception catching (great for checking fallback paths)
    "FBT001", # Allow boolean positional arguments
    "FBT002", # Allow boolean default positional arguments
    "PLR2004", # Allow numerical values not being constant
    "PLW0120", # Allow loose control structures if an LLM generated messy loop edge-case tests
    "PLR0913", # Allow many arguments
    "S101",    # Allow 'assert' statements (otherwise bandit flags every single test)
    "SLF001", # Access to private member
]
"__init__.py" = ["D104"]
"__main__.py" = ["D100", "D104"]
# citeproc-py doesnt expose internal exceptions
"src/citecraft/adapters/citeproc_adapter.py" = ["BLE001"]
"src/citecraft/storage/db_client.py" = ["S608"]
"src/citecraft/logging_config.py" = ["T20"]
"tests/e2e/test_cli_pipeline.py" = ["S603"]


[tool.ruff.format]
quote-style = "double"
